--- a/HMGreenCityMLM/Views/Admin/AdminDashBoard.cshtml
+++ b/HMGreenCityMLM/Views/Admin/AdminDashBoard.cshtml
@@ -147,7 +147,7 @@
                             <!-- /.panel -->
                             <!-- /.panel -->
                         </div>*@
-                    <div class="col-lg-6 col-xl-6 ">
+                    @*<div class="col-lg-6 col-xl-6 ">
                         <div class="card">
                             <div class="card-header">
                                 <h4>Current Year Joining Details</h4>
@@ -156,7 +156,7 @@
                                 <div id="schart1"></div>
                             </div>
                         </div>
-                    </div>
+                    </div>*@
                    
                     @*<div class="col-lg-6">
                         <div class="card panel-default">
@@ -173,7 +173,50 @@
                     </div>*@
 
 
+                    <div class="col-lg-6 col-xl-6 ">
+                        <div class="card">
+                            <div class="card-header">
+                                <h4>Current Year Joining Details</h4>
+                                <div class="card-header-action">
+                                    <ul class="nav nav-pills" role="tablist" id="chart-tabs-joining">
+                                    @if (Model != null)
+                                    {
+                                        if (Model.lstdetailsYear != null)
+                                        {
+                                            int j = 1;
+                                            foreach (var Item1 in Model.lstdetailsYear)
+                                            {
+                                                if (j == 1)
+                                                {
+                                                     <li class="nav-item">
+                                                        <a class="nav-link active card-tab-style" href="#yearidchart_1"                             id="yearidjoining2_1" data-toggle="tab" data-id="1" role="tab"
+                                                            aria-selected="false">@Item1.Year</a>
+                                                        </li>
+                                                 }
+                                                            else
+                                                 {
+                                                        <li class="nav-item">
+                                                        <a class="nav-link card-tab-style" href="#yearidchart_@j" id="yearidjoining2_@j"  data-toggle="tab" data-id="@j" role="tab"
+                           aria-selected="false">@Item1.Year</a>
+                                                       </li>
+                                                }
+                                                j++;
+                                            }
 
+                                        }
+
+                                    }
+                                    
+
+
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card-body" style="padding-top:0px;padding-bottom:0px;">
+                                <div id="schart1"></div>
+                            </div>
+                        </div>
+                    </div>
                     @*========================== START Year & Month Business Details =================================*@
                     <div class="col-lg-6 col-xl-6 ">
                         <div class="card">
@@ -675,13 +718,14 @@
     google.charts.setOnLoadCallback(smallchart1);
 
     function smallchart1() {
-
+        debugger;
+        const YearsJoining = { YearsJoining: $("#yearidjoining2_1").text() };
         $.ajax({
             type: 'POST',
             dataType: 'json',
             contentType: 'application/json',
             url: '/Admin/GetJoiningDeatils',
-            data: JSON.stringify(),
+            data: JSON.stringify(YearsJoining),
             success:
             function (d) {
                 var Month = [];
@@ -692,103 +736,225 @@
                     Total.push(parseInt(t[i].Total));
                 }
            
-        var options = {
-            series: [
-              {
-                  name: "Total Joining",
-                  data: Total,
-              },
-            ],
-            chart: {
-                type: "bar",
-                height: 230,
-                dropShadow: {
-                    enabled: true,
-                    opacity: 0.3,
-                    blur: 2,
-                    left: -5,
-                    top: 5,
-                },
-                toolbar: {
-                    show: false,
-                },
-            },
-            plotOptions: {
-                bar: {
-                    horizontal: false,
-                    columnWidth: "10%",
-                    endingShape: "rounded",
-                },
-            },
-            dataLabels: {
-                enabled: false,
-            },
-            stroke: {
-                show: true,
-                width: 0,
-                colors: ["transparent"],
-            },
-            xaxis: {
-                categories: Month,
-                labels: {
-                    offsetX: 0,
-                    offsetY: 0,
-                    style: {
-                        fontSize: "12px",
-                        fontFamily: "Segoe UI",
-                        cssClass: "apexcharts-xaxis-title",
+                var options = {
+                    series: [
+                      {
+                          name: "Total Joining",
+                          data: Total,
+                      },
+                    ],
+                    chart: {
+                        type: "bar",
+                        height: 230,
+                        dropShadow: {
+                            enabled: true,
+                            opacity: 0.3,
+                            blur: 2,
+                            left: -5,
+                            top: 5,
+                        },
+                        toolbar: {
+                            show: false,
+                        },
                     },
-                },
-            },
-            yaxis: {
-                //title: {
-                //    text: "$ (thousands)",
-                //},
-                labels: {
-                    offsetX: 0,
-                    offsetY: 0,
-                    style: {
-                        fontSize: "12px",
-                        fontFamily: "Segoe UI",
-                        cssClass: "apexcharts-yaxis-title",
+                    plotOptions: {
+                        bar: {
+                            horizontal: false,
+                            columnWidth: "10%",
+                            endingShape: "rounded",
+                        },
                     },
-                },
-            },
-            fill: {
-                type: "gradient",
-                gradient: {
-                    shade: "light",
-                    type: "verticle",
-                    shadeIntensity: 0.25,
-                    gradientToColors: undefined,
-                    inverseColors: false,
-                    opacityFrom: 0.85,
-                    opacityTo: 0.85,
-                    stops: [0, 90, 100],
-                },
-            },
-            tooltip: {
-                theme: "dark",
-                marker: {
-                    show: true,
-                },
-                x: {
-                    show: true,
-                },
-                y: {
-                    formatter: function (val) {
-                        //return "Total: " + val + " Joined";
-                        return val + " Joined";
+                    dataLabels: {
+                        enabled: false,
                     },
-                },
-            },
-        };
-        var chart = new ApexCharts(document.querySelector("#schart1"), options);
-        chart.render();
-       }
-    })
-    }
+                    stroke: {
+                        show: true,
+                        width: 0,
+                        colors: ["transparent"],
+                    },
+                    xaxis: {
+                        categories: Month,
+                        labels: {
+                            offsetX: 0,
+                            offsetY: 0,
+                            style: {
+                                fontSize: "12px",
+                                fontFamily: "Segoe UI",
+                                cssClass: "apexcharts-xaxis-title",
+                            },
+                        },
+                    },
+                    yaxis: {
+                        //title: {
+                        //    text: "$ (thousands)",
+                        //},
+                        labels: {
+                            offsetX: 0,
+                            offsetY: 0,
+                            style: {
+                                fontSize: "12px",
+                                fontFamily: "Segoe UI",
+                                cssClass: "apexcharts-yaxis-title",
+                            },
+                        },
+                    },
+                    fill: {
+                        type: "gradient",
+                        gradient: {
+                            shade: "light",
+                            type: "verticle",
+                            shadeIntensity: 0.25,
+                            gradientToColors: undefined,
+                            inverseColors: false,
+                            opacityFrom: 0.85,
+                            opacityTo: 0.85,
+                            stops: [0, 90, 100],
+                        },
+                    },
+                    tooltip: {
+                        theme: "dark",
+                        marker: {
+                            show: true,
+                        },
+                        x: {
+                            show: true,
+                        },
+                        y: {
+                            formatter: function (val) {
+                                //return "Total: " + val + " Joined";
+                                return val + " Joined";
+                            },
+                        },
+                    },
+                };
+                var chart21 = new ApexCharts(document.querySelector("#schart1"), options);
+                chart21.render();
 
+                $('#chart-tabs-joining a[data-toggle="tab"]').on("shown.bs.tab", function (e) {
+                    debugger;
+                    var id = $(this).attr("data-id");
+                    if (id && id === $(this).attr("data-id")) {
+                        const YearsJoining = { YearsJoining: $("#yearidjoining2_" + id).text() };
+                        var toggleButton = document.getElementById("yearidjoining2_" + id);
+                        $.ajax({
+                            type: 'POST',
+                            dataType: 'json',
+                            contentType: 'application/json',
+                            url: '/Admin/GetJoiningDeatils',
+                            data: JSON.stringify(YearsJoining),
+                            success:
+                            function (d) {
+                                var Month = [];
+                                var Total = [];
+                                var t = JSON.parse(JSON.stringify(d));
+                                for (var i = 0; i < t.length; i++) {
+                                    Month.push(t[i].Month);
+                                    Total.push(parseInt(t[i].Total));
+                                }
+           
+                                var options = {
+                                    series: [
+                                      {
+                                          name: "Total Joining",
+                                          data: Total,
+                                      },
+                                    ],
+                                    chart: {
+                                        type: "bar",
+                                        height: 230,
+                                        dropShadow: {
+                                            enabled: true,
+                                            opacity: 0.3,
+                                            blur: 2,
+                                            left: -5,
+                                            top: 5,
+                                        },
+                                        toolbar: {
+                                            show: false,
+                                        },
+                                    },
+                                    plotOptions: {
+                                        bar: {
+                                            horizontal: false,
+                                            columnWidth: "10%",
+                                            endingShape: "rounded",
+                                        },
+                                    },
+                                    dataLabels: {
+                                        enabled: false,
+                                    },
+                                    stroke: {
+                                        show: true,
+                                        width: 0,
+                                        colors: ["transparent"],
+                                    },
+                                    xaxis: {
+                                        categories: Month,
+                                        labels: {
+                                            offsetX: 0,
+                                            offsetY: 0,
+                                            style: {
+                                                fontSize: "12px",
+                                                fontFamily: "Segoe UI",
+                                                cssClass: "apexcharts-xaxis-title",
+                                            },
+                                        },
+                                    },
+                                    yaxis: {
+                                        //title: {
+                                        //    text: "$ (thousands)",
+                                        //},
+                                        labels: {
+                                            offsetX: 0,
+                                            offsetY: 0,
+                                            style: {
+                                                fontSize: "12px",
+                                                fontFamily: "Segoe UI",
+                                                cssClass: "apexcharts-yaxis-title",
+                                            },
+                                        },
+                                    },
+                                    fill: {
+                                        type: "gradient",
+                                        gradient: {
+                                            shade: "light",
+                                            type: "verticle",
+                                            shadeIntensity: 0.25,
+                                            gradientToColors: undefined,
+                                            inverseColors: false,
+                                            opacityFrom: 0.85,
+                                            opacityTo: 0.85,
+                                            stops: [0, 90, 100],
+                                        },
+                                    },
+                                    tooltip: {
+                                        theme: "dark",
+                                        marker: {
+                                            show: true,
+                                        },
+                                        x: {
+                                            show: true,
+                                        },
+                                        y: {
+                                            formatter: function (val) {
+                                                //return "Total: " + val + " Joined";
+                                                return val + " Joined";
+                                            },
+                                        },
+                                    },
+                                };
+                                chart21.destroy();
+                                var chart23 = new ApexCharts(document.querySelector("#schart1"), options);
+                                chart23.render();
+                
+            
+                            }
+                        })
+                    }
+                })
+            }
+        })
+        }
     /// END Joining Details graph
 </script>
 
