--- a/HMGreenCityMLM/Views/AdminReports/UpdatePlotDetails.cshtml
+++ b/HMGreenCityMLM/Views/AdminReports/UpdatePlotDetails.cshtml
@@ -98,7 +98,7 @@
 
                                                 </div>
                                                 <div class="dt-responsive table-responsive">
-                                                    <table class="table mb-0" id="example23">
+                                                    <table class="table mb-0" id="tableExport234">
                                                         <thead>
                                                             <tr>
                                                                 <th>Sr No.</th>
@@ -114,7 +114,7 @@
                                                                 <th style="min-width:200px;">Sector Name</th>
                                                                 <th style="min-width:200px;">Block Name</th>
                                                                 <th style="min-width:200px;">Plot Number</th>
-                                                                <th>Action </th>
+                                                                <th class="not-export-col">Action </th>
                                                             </tr>
                                                         </thead>
                                                         <tbody>
