--- a/HMGreenCityMLM/Views/Admin/AdvancePaymentReport.cshtml
+++ b/HMGreenCityMLM/Views/Admin/AdvancePaymentReport.cshtml
@@ -64,7 +64,7 @@
                                         <div class="row">
                                             <div class="col-md-12 table-responsive">
                                                 <div class="dt-responsive table-responsive">
-                                                    <table class="table mb-0" id="example23">
+                                                    <table class="table mb-0" id="tableExport234">
                                                         
                                                         <thead>
                                                             <tr>
