--- a/HMGreenCityMLM/Views/Admin/PayPayout.cshtml
+++ b/HMGreenCityMLM/Views/Admin/PayPayout.cshtml
@@ -70,7 +70,7 @@
                             int i = 1;
                     <div class="table-responsive">
                         @*<table class="table table-striped table-hover" id="tableExport" style="width:100%;">*@
-                        <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                        <table class="table table-striped table-hover" id="tableExport234" style="width:100%;">
                             <thead>
                                 <tr>
                                     <th>Sr No.</th>
