--- a/HMGreenCityMLM/Views/AdminReports/BusinessReport.cshtml
+++ b/HMGreenCityMLM/Views/AdminReports/BusinessReport.cshtml
@@ -56,7 +56,7 @@
                     </div>
                     <br />
                     <div class="table-responsive">
-                        <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                        <table class="table table-striped table-hover" id="tableExport234" style="width:100%;">
                             <thead>
                                 <tr>
                                     <th>Sr No.</th>
