--- a/HMGreenCityMLM/Views/AdminReports/GetBusinessStatus.cshtml
+++ b/HMGreenCityMLM/Views/AdminReports/GetBusinessStatus.cshtml
@@ -59,7 +59,7 @@
                     </div>
                     <br />
                     <div class="table-responsive">
-                        <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                        <table class="table table-striped table-hover" id="tableExport234" style="width:100%;">
                             <thead>
                                 <tr>
                                     <th>Sr No.</th>
@@ -76,7 +76,7 @@
                                     <th>Calculation Status</th>
                                     <th>ReceiptNo</th>
                                     <th>Reward</th>
-                                    <th>Action</th>
+                                    <th class="not-export-col">Action</th>
                                 </tr>
                             </thead>
                             <tfoot>
