--- a/HMGreenCityMLM/Views/AdminReports/PayoutDetail.cshtml
+++ b/HMGreenCityMLM/Views/AdminReports/PayoutDetail.cshtml
@@ -62,7 +62,7 @@
                     </div>
                    <br />
                     <div class="table-responsive">
-                        <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                        <table class="table table-striped table-hover" id="tableExport234" style="width:100%;">
                             <thead>
                                 <tr>
                                     <th>Sr No.</th>
