--- a/HMGreenCityMLM/Views/AdminReports/TopupReportNew.cshtml
+++ b/HMGreenCityMLM/Views/AdminReports/TopupReportNew.cshtml
@@ -91,7 +91,7 @@
                     </div>
                     <br />
                     <div class="table-responsive">
-                        <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                        <table class="table table-striped table-hover" id="tableExport234" style="width:100%;">
 
                             <thead>
                                 <tr>
@@ -109,7 +109,7 @@
                                     <th>Calculation Status</th>
                                     <th>ReceiptNo</th>
                                     <th>Business Type</th>
-                                    <th>Print</th>
+                                    <th class="not-export-col">Print</th>
                                 </tr>
                             </thead>
                             <tfoot>
