--- a/HMGreenCityMLM/Views/Admin/PaidPayout.cshtml
+++ b/HMGreenCityMLM/Views/Admin/PaidPayout.cshtml
@@ -23,8 +23,11 @@
             </div>
         </div>
     </div>
+    <p style="color:red">@TempData["Payout"]</p>
     <div class="row">
         <div class="col-12 col-md-12 col-lg-12">
+            <input type="hidden" id="UserType" value="@Session["UserType"]" />
+            <input type="hidden" id="UserTypeName" value="@Session["UserTypeName"]" />
             <div class="card">
                 <div class="card-body">
                     <div class="form-row">
@@ -63,40 +66,61 @@
                             @Html.DropDownListFor(m => m.Leg, new SelectList(ViewBag.ddlLeg, "Value", "Text"), new { @class = "form-control" })
                         </div>
                         <div class="form-group col-md-3">
-                            <input type="submit" name="GetDetails" class="btn btn-info" value="Get Details" />
+                            <input type="submit" name="GetDetails" class="btn btn-info" value="Get Details" onclick="return GetMenuDetails();" />
                         </div>
                     </div>
                     <br />
                     <div class="table-responsive">
-                        <table class="table table-striped table-hover" id="tableExport234" style="width:100%;">
+                        <table class="table table-striped table-hover" data-page-length='25' id="tableExport234" style="width:100%;">
                             <thead>
                                 <tr>
                                     <th>Sr No.</th>
+                                    <th hidden>Pk_PayoutPaidId</th>
                                     <th>LoginId</th>
                                     <th>Name</th>
                                     <th>Payment Date</th>
                                     <th>Amount</th>
+                                    <th style="display:none;min-width:110px;"></th>
+                                    <th style="display:none;min-width:110px;"></th>
                                     <th>Payment Mode</th>
                                     <th>Bank Name</th>
+                                    <th style="display:none;min-width:110px;"></th>
                                     <th>Bank Branch</th>
+                                    <th style="display:none;min-width:110px;"></th>
                                     <th>Transaction Date</th>
+                                    <th style="display:none;min-width:110px;"></th>
                                     <th>TransactionNo</th>
+                                    <th style="display:none;min-width:110px;"></th>
                                     <th>Remarks</th>
-                                </tr>
+                                    <th style="display:none;min-width:110px;"></th>
+                                    <th>Edit</th>
+                                    <th>Delete</th>
+                                   </tr>
                             </thead>
                             <tfoot>
                                 <tr>
                                     <th></th>
+                                    <th hidden></th>
                                     <th></th>
                                     <th></th>
                                     <th><b>Total</b></th>
                                     <th>@ViewBag.Total</th>
+                                    <th style="display:none;min-width:110px;"></th>
                                     <th></th>
                                     <th></th>
+                                    <th style="display:none;min-width:110px;"></th>
                                     <th></th>
+                                    <th style="display:none;min-width:110px;"></th>
                                     <th></th>
+                                    <th style="display:none;min-width:110px;"></th>
                                     <th></th>
+                                    <th style="display:none;min-width:110px;"></th>
                                     <th></th>
+                                    <th style="display:none;min-width:110px;"></th>
+                                    <th></th>
+                                    <th style="display:none;min-width:110px;"></th>
+                                    <th></th>
+
                                 </tr>
                             </tfoot>
                             <tbody>
@@ -109,16 +133,55 @@
                                         {
                                             <tr class="text-left">
                                                 <td>@i</td>
-                                                <td>@Item.LoginId</td>
+                                                <td hidden>@Item.Pk_PayoutPaidId</td>
+                                                <td class="Login_@Item.Pk_PayoutPaidId">@Item.LoginId</td>
                                                 <td>@Item.DisplayName</td>
                                                 <td>@Item.PaymentDate</td>
-                                                <td>@Item.Amount</td>
-                                                <td>@Item.PaymentMode</td>
-                                                <td>@Item.BankName</td>
-                                                <td>@Item.BankBranch</td>
-                                                <td>@Item.TransactionDate</td>
-                                                <td>@Item.TransactionNo</td>
-                                                <td>@Item.ReceiptNo</td>
+                                                <td  class="tdcompany_@Item.Pk_PayoutPaidId">@Item.Amount</td>
+                                                <td class="ccompany_@Item.Pk_PayoutPaidId" style="display:none;min-width:150px;">
+                                                    <input type="text" class="form-control Amount_@Item.Pk_PayoutPaidId" id="Amount_@Item.Pk_PayoutPaidId" value="@Item.Amount" />
+                                                </td>
+                                                <td class="ccompany_@Item.Pk_PayoutPaidId" style="display:none;min-width:110px;">
+                                                     @Html.DropDownList("PaymentMode_" + @Item.Pk_PayoutPaidId, new SelectList(ViewBag.ddlpaymentmode, "Value", "Text", @Item.PaymentMode), new { @class = "form-control ddlPaymentMode_" + @Item.Pk_PayoutPaidId, @onchange = "getpaymentdetails(" + @Item.Pk_PayoutPaidId + ");" })
+                                                    @*@Html.DropDownListFor(m => m.PaymentMode, new SelectList(ViewBag.ddlpaymentmode, "Value", "Text"), new { @class = "form-control ddlPaymentMode_" + @Item.Pk_PayoutPaidId, @onchange = "return getpaymentdetails(" + @Item.Pk_PayoutPaidId + ");" })*@
+                                                 </td>
+                                                <td class="tdcompany_@Item.Pk_PayoutPaidId">@Item.PaymentMode</td>
+
+
+                                                <td class="tdcompany_@Item.Pk_PayoutPaidId">@Item.BankName</td>
+                                                <td class="ccompany_@Item.Pk_PayoutPaidId" style="display:none;min-width:150px;">
+                                                <input type="text" class="form-control BankName_@Item.Pk_PayoutPaidId" id="BankName_@Item.Pk_PayoutPaidId" value="@Item.BankName"/>
+                                                 </td>
+
+                                                <td class="tdcompany_@Item.Pk_PayoutPaidId">@Item.BankBranch</td>
+                                                <td class="ccompany_@Item.Pk_PayoutPaidId" style="display:none;min-width:150px;">
+                                                    <input type="text" class="form-control BankBranch_@Item.Pk_PayoutPaidId" id="BankBranch_@Item.Pk_PayoutPaidId" value="@Item.BankBranch" />
+                                                </td>
+                                                <td class="tdcompany_@Item.Pk_PayoutPaidId">@Item.TransactionDate</td>
+                                                <td class="ccompany_@Item.Pk_PayoutPaidId" style="display:none;min-width:150px;">
+                                                    <input type="date"class="form-control Transdate_@Item.Pk_PayoutPaidId" id="Transdate_@Item.Pk_PayoutPaidId"/>
+                                                           @*placeholder="DD/MM/YYYY" value="@Item.TransactionDate" />*@
+                                                 </td>
+                                                <td class="tdcompany_@Item.Pk_PayoutPaidId">@Item.TransactionNo</td>
+                                                <td class="ccompany_@Item.Pk_PayoutPaidId" style="display:none;min-width:150px;">
+                                                    <input type="text" class="form-control TransNo_@Item.Pk_PayoutPaidId" id="TransNo_@Item.Pk_PayoutPaidId" value="@Item.TransactionNo"/>
+                                                </td>
+
+                                           <td style="min-width:200px" class="tdcompany_@Item.Pk_PayoutPaidId">@Item.ReceiptNo</td>
+                                           <td class="ccompany_@Item.Pk_PayoutPaidId" style="display:none;min-width:150px;">
+                                     <textarea class="form-control remark_@Item.Pk_PayoutPaidId" id="remark_@Item.Pk_PayoutPaidId">@Item.ReceiptNo</textarea>
+                                                </td>
+                                               
+                                                <td>
+                                                    <a class="btn tblEditBtn edit" data-toggle="tooltip" id="btn_Edit_@Item.Pk_PayoutPaidId" onclick="Edit('@Item.Pk_PayoutPaidId');" title="" data-original-title="Edit"><i class="material-icons">mode_edit</i></a>
+                                                    <div class="btn-group mb-3 btn-group-sm" role="group" aria-label="Basic example">
+                                                   <a href="#company_@Item.Pk_PayoutPaidId" data-comepensedetailsid='@Item.Pk_PayoutPaidId' onclick="CompanyUpdate('@Item.Pk_PayoutPaidId');" class="btn btn-primary ccompany_@Item.Pk_PayoutPaidId" style="display:none" id="btn_cupdate_@Item.Pk_PayoutPaidId">Update</a>
+                                                        <a href="#btn_Edit_@Item.Pk_PayoutPaidId" onclick="CompanyCancel('@Item.Pk_PayoutPaidId');" class="btn btn-danger ccompany_@Item.Pk_PayoutPaidId" style="display:none" id="btn_cancel_+@Item.Pk_PayoutPaidId">Cancel</a>
+                                                    </div>
+                                                </td>
+                                                <td>
+                                                    <a class="btn btn-danger btn-sm delete" href="/Admin/DeletePaidPayout?Id=@Item.Pk_PayoutPaidId&&LoginId=@Item.LoginId&&Amount=@Item.Amount" onclick="return confirm('Are you sure you want to delete this payout?');">Delete</a>
+                                                </td>
                                             </tr>
                                             i++;
                                         }
@@ -132,42 +195,25 @@
         </div>
     </div>
 }
+
 <script src="../vendor/jquery/jquery.min.js"></script>
-<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-<link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="../../WebsiteCss/js/jquery.js"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
-<script>
 
-    $('#FromDate').datepicker({
-        dateFormat: 'dd/mm/yy',
-        changeYear: true,
-        changeMonth: true,
 
-    });
-    $('#ToDate').datepicker({
-        dateFormat: 'dd/mm/yy',
-        changeYear: true,
-        changeMonth: true
-    });
-
-    $('#TFromDate').datepicker({
-        dateFormat: 'dd/mm/yy',
-        changeYear: true,
-        changeMonth: true,
-
-    });
-    $('#TToDate').datepicker({
-        dateFormat: 'dd/mm/yy',
-        changeYear: true,
-        changeMonth: true
-    });
-</script>
 <script>
     $(document).ready(function () {
+        var UserType = $('#UserType').val();
+        var UserTypeName = $('#UserTypeName').val();
+        if (UserType == 'Admin' && UserTypeName != 'Admin') {
+            GetMenuDetails();
+        }
+
         if ($("#IsDownline").is(':checked')) {
             $("#divLeg").show();
+
         }
         //$('#IsDownline').prop('checked', true);
         $('#IsDownline').change(function () {
@@ -192,8 +238,7 @@
             success: function (response) {
                 if (response != null) {
 
-
-                    $(response).each(function (index, item) {
+                 $(response).each(function (index, item) {
                         cityuse.push(item.UserName + "(" + item.LoginIDD + ")");
                     });
 
@@ -213,6 +258,187 @@
             }
         });
     });
+
+
+    function getpaymentdetails(index) {
+        debugger;
+        var paymentmode = $('.ddlPaymentMode_' + index).val();
+
+        $('[name="paymentmode_' + index + '"]').val(paymentmode);
+
+        if (paymentmode == "Cash" || paymentmode == "0") {
+            $('.BankName_' + index).val('');
+            $('.BankBranch_' + index).val('');
+            $('.Transdate_' + index).val('');
+            $('.TransNo_' + index).val('');
+
+            $('#BankName_' + index).hide();
+            $('#BankBranch_' + index).hide();
+            $('#Transdate_' + index).hide();
+            $('#TransNo_' + index).hide();
+        }
+        else if (paymentmode == "UPI") {
+            $('.BankName_' + index).val('');
+            $('.BankBranch_' + index).val('');
+            $('#BankName_' + index).hide();
+            $('#BankBranch_' + index).hide();
+        }
+        else {
+            $('#BankName_' + index).show();
+            $('#BankBranch_' + index).show();
+            $('#Transdate_' + index).show();
+            $('#TransNo_' + index).show();
+
+        }
+    }
+    function Edit(Id) {
+        debugger;
+        $('.ccompany_' + Id).show();
+        $('.tdcompany_' + Id).hide();
+
+        $('#btn_Edit_' + Id).hide();
+        getpaymentdetails(Id);
+    }
+
+    
+    function CompanyUpdate(Id) {
+        debugger;
+
+        var Amt = $(".Amount_" + Id).val();
+        var PaymentId = $(".ddlPaymentMode_" + Id + "  option:selected").val();
+        var BankN = $(".BankName_" + Id).val();
+        var BankB = $(".BankBranch_" + Id).val();
+        var TransD = $(".Transdate_" + Id).val();
+        var TransN = $(".TransNo_" + Id).val();
+        var remark = $(".remark_" + Id).val();
+        var Pk_PayoutPaidId = Id;
+        var Login = $(".Login_" + Id).text();
+        
+        $(".errortext").removeClass("errortext");
+       
+        $.ajax({
+            url: "/Admin/EditPaidPayout",
+            Type: "POST",
+            DataType: "JSON",
+            data: {Loginid:Login ,Id: Pk_PayoutPaidId,Amount:Amt, PaymentMode: PaymentId, Remarks: remark, BankName: BankN, BankBranch: BankB, TransDate: TransD, TransNo: TransN },
+            success: function (data) {
+                if (data.Result == 'Yes') {
+                    alert('Paid payout details updated successfully !!')
+                    location.reload();
+                }
+               
+                else {
+                    alert(data.Result);
+                }
+                location.reload();
+            }
+        });
+    }
+
+    function CompanyCancel(Id) {
+        debugger;
+        //var Company = $('.company_' + index).val();
+        $('.ccompany_' + Id).hide();
+        $('.tdcompany_' + Id).show();
+        $('#btn_Edit_' + Id).show();
+    }
+
+
+    $('#FromDate').datepicker({
+        dateFormat: 'dd/mm/yy',
+        changeYear: true,
+        changeMonth: true,
+
+    });
+    $('#ToDate').datepicker({
+        dateFormat: 'dd/mm/yy',
+        changeYear: true,
+        changeMonth: true
+    });
+
+    $('#TFromDate').datepicker({
+        dateFormat: 'dd/mm/yy',
+        changeYear: true,
+        changeMonth: true,
+
+    });
+    $('#TToDate').datepicker({
+        dateFormat: 'dd/mm/yy',
+        changeYear: true,
+        changeMonth: true
+    });
+
+    $('#TransactionDate').datepicker({
+        dateFormat: 'dd/mm/yy',
+        maxDate: 0,
+        changeYear: true,
+        changeMonth: true
+    });
+
+
+
+
+    function GetMenuDetails() {
+        var URL = "/Admin/PaidPayout";
+        $.ajax({
+            type: "POST",
+            url: "/Master/GetMenuDetails",
+            data: { URL: URL },
+            dataType: "json",
+            //contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                var obj = jQuery.parseJSON(data);
+                console.log(data)
+                for (var i = 0; i < obj.length; i++) {
+                    debugger
+                    if (obj[i].FormDelete == true && obj[i].FormUpdate == false) {
+                        $(".delete").hide();
+                        $(".edit").hide();
+                        var table = $('#tableExport').DataTable();
+                        table.column(12).visible(false);
+                        table.column(13).visible(false);
+                    }
+                    else if (obj[i].FormDelete == false && obj[i].FormUpdate == true) {
+                        $(".delete").show();
+                        $(".edit").show();
+                        var table = $('#tableExport').DataTable();
+                        table.column(12).visible(true);
+                        table.column(13).visible(true);
+                    }
+                    else if (obj[i].FormDelete == true && obj[i].FormUpdate == true) {
+                        $(".delete").show();
+                        $(".edit").show();
+                        var table = $('#tableExport').DataTable();
+                        table.column(12).visible(true);
+                        table.column(13).visible(true);
+                    }
+                    else if (obj[i].FormDelete == false && obj[i].FormUpdate == false) {
+                        $(".delete").hide();
+                        $(".edit").hide();
+                        var table = $('#tableExport').DataTable();
+                        table.column(12).visible(false);
+                        table.column(13).visible(false);
+                    }
+                    else {
+                        $(".delete").hide();
+                        $(".edit").hide();
+                        var table = $('#tableExport').DataTable();
+                        table.column(12).visible(false);
+                        table.column(13).visible(false);
+                    }
+
+                }
+            },
+            error: function () {
+                alert("Error occured!!")
+            }
+        });
+    }
+
+
+
+
+
 </script>
 <style>
     .btn-info {
