--- a/HMGreenCityMLM/Views/Accounts/Topup.cshtml
+++ b/HMGreenCityMLM/Views/Accounts/Topup.cshtml
@@ -217,7 +217,7 @@
         }
         else if (paymentmode == "UPI") {
             // Show only chequeno and chequdate for UPI
-            bankname.style.display = "none";
+            bankname.style.display = "block";
             chequeno.style.display = "block";
             chequdate.style.display = "block";
             bankbranch.style.display = "none";
