--- a/HMGreenCityMLM/Views/AdminReports/TransactionLog.cshtml
+++ b/HMGreenCityMLM/Views/AdminReports/TransactionLog.cshtml
@@ -29,21 +29,29 @@
                 <div class="card-body">
                     <div class="form-row">
                         
-                        <div class="form-group col-md-3">
+                        <div class="form-group col-md-4">
                             <label>Action</label>
                             @Html.TextBoxFor(m => m.Action, new { @class = "form-control" })
                         </div>
-                        
-                        <div class="form-group col-md-3">
+                        <div class="form-group col-md-4">
+                            <label>Admin LoginId</label>
+                            @Html.TextBoxFor(m => m.Action, new { @class = "form-control" })
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label>Bussiness Partner LoginId</label>
+                            @Html.TextBoxFor(m => m.Action, new { @class = "form-control" })
+                        </div>
+                        <div class="form-group col-md-4">
                             <label>From Date</label>
                             @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @readonly = "readonly" })
                         </div>
-                        <div class="form-group col-md-3">
+                        <div class="form-group col-md-4">
                             <label>To Date</label>
                            @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = "readonly" })
                         </div>
                         <div class="form-group col-md-4">
-                            <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" />
+                            <label>&nbsp;</label>
+                            <input class="btn btn-success d-block" type="submit" value="Search" name="Search" id="btnSearch" />
                         </div>
                     </div>
                     <br />
