--- a/HMGreenCityMLM/Views/AdminReports/TransactionLog.cshtml
+++ b/HMGreenCityMLM/Views/AdminReports/TransactionLog.cshtml
@@ -30,6 +30,11 @@
                     <div class="form-row">
                         
                         <div class="form-group col-md-3">
+                            <label>Login ID </label>
+                            @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control" })
+                            @Html.HiddenFor(m => m.ToLoginID)
+                        </div>
+                        <div class="form-group col-md-3">
                             <label>Action</label>
                             @Html.TextBoxFor(m => m.Action, new { @class = "form-control" })
                         </div>
@@ -110,3 +115,41 @@
 </script>
 
 
+<script>
+    $(document).ready(function () {
+        debugger;
+        $("input").attr("autocomplete", "off");
+        var cityuse = [];
+        $("#loader").css({ 'display': '' });
+        $.ajax({
+            url: '/AdminReports/GetUserList',
+            type: 'Post',
+            success: function (response) {
+                debugger;
+
+                if (response != null) {
+                    $(response).each(function (index, item) {
+                        cityuse.push(item.UserName + "(" + item.LoginIDD + ")");
+                    });
+
+                    $('#LoginId').autocomplete({
+                        source: cityuse,
+                        select: function (event, ui) {
+                            var str = ui.item.label;
+                            var strsplit = str.split("(");
+                            $('#ToLoginID').val(strsplit[1].substr(0, strsplit[1].length - 1));
+                        }
+                    })
+                }
+
+            }, error: function () {
+                alert('Some Thing wrong!');
+                $("#loader").css({ 'display': 'none' });
+            }
+        });
+    });
+   
+   
+   
+   
+</script>
